--- a/lesson15/index.html
+++ b/lesson15/index.html
@@ -13,17 +13,13 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
-    <title>Conditional rendering if</title>
+    <title>For loop</title>
   </head>
 
   <body>
     <div class="container-fluid my-2">
       <div id="app">
         <h2>{{ title }}</h2>
-        <p v-if="showName">Mario</p>
-        <p v-else-if="showAge">25</p>
-        <button @click="toggleName">Show name: {{ showName }}</button>
-        <button @click="toggleAge">Show age: {{ showAge }}</button>
       </div>
     </div>
 
